# breakout_pygame

breakout/: pyproject.toml
breakout/src/breakout/: breakout.py  main.py
breakout/tests/: test_breakout.py
core/: pyproject.toml
core/src/core/: __init__.py  application.py  application_listener.py  game.py  screen.py  window.py
core/tests/: test_application_lifecycle.py
foo/: pyproject.toml
src/: brick.py  brick_breaker_game.py  game_config.py  game_screen.py  preference.py
src/core/: __init__.py  application.py  camera.py  fit_viewport.py  game.py  screen.py  shape_renderer.py
src/utils/: __init__.py  intersector.py  loading_screen_base.py  math_utils.py
src_backup/: ball.py  brick_breaker_game.py  entity_factory.py  game_config.py  game_controller.py  game_renderer.py  game_screen.py  loading_screen.py  main.py  paddle.py  paddle_input_controller.py  preference.py  score_controller.py
src_backup/core/: application.py  asset_manager.py  camera.py  game.py  window.py
src_backup/utils/: __init__.py  debug_camera_controller.py  entity_base.py  game_base.py  loading_screen_base.py  rectangle.py  shape_renderer_utils.py  viewport_utils.py
utils/: pyproject.toml
